InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityState__c/vlocity_ins__VlocityState__c.object-meta.xml
<CustomObject>
    <description>A state (such as Draft, Submitted, Approved or Superceded) defined within a given Vlocity State Model. States identify whether the governed object is allowed to be deleted or updated when in the state and which record type the record should be in when in that state. Master-detail child object of Vlocity State Model.</description>
    <label>Vlocity State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>