InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityState__c/fields/vlocity_ins__StateModelId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StateModelId__c</fullName>
    <label>Vlocity State Model</label>
    <referenceTo>vlocity_ins__VlocityStateModel__c</referenceTo>
    <relationshipLabel>Vlocity State</relationshipLabel>
    <relationshipName>Vlocity_State</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>