InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityState__c/fields/vlocity_ins__StateRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StateRecordType__c</fullName>
    <label>State Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>